src/test/deca/context/valid/created/amusement.deca
//Description :
// Un programme amusant
//
// Resultats :
//  2


class Int {

    int int(int int) {
        print(int);
    }
}

{
    Int int = new Int();
    int.int(2);
}