src/test/deca/context/invalid/created/class_incorrect_new3.deca
//Description :
// Initialisation invalide
//
// Resultats :
// Erreur

{
    boolean a = new boolean();
}
